--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@react-native-vector-icons/fontawesome5": "^12.2.0",
     "@react-native-vector-icons/fontisto": "^12.3.0",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "material-icons": "^1.13.14",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "^5.6.0",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
     "react-native-vector-icons": "^10.3.0"
   },
