--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "material-icons": "^1.13.14",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-health": "^1.19.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-svg": "^15.12.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
