--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "@reduxjs/toolkit": "^2.8.2",
     "material-icons": "^1.13.14",
     "react": "19.1.0",
     "react-native": "0.81.0",
@@ -25,8 +26,10 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
     "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-video": "^6.16.1"
+    "react-native-video": "^6.16.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
