--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-vector-icons/fontawesome5": "^12.2.0",
     "@react-native-vector-icons/fontisto": "^12.3.0",
     "@react-native/new-app-screen": "0.81.0",
@@ -20,9 +22,12 @@
     "material-icons": "^1.13.14",
     "react": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-app-auth": "^8.0.3",
     "react-native-health": "^1.19.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
     "react-native-svg": "^15.12.1",
