--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-app-auth": "^8.0.3",
+    "react-native-fs": "^2.20.0",
     "react-native-health": "^1.19.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-keychain": "^10.0.0",
