--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "@shopify/checkout-sheet-kit": "^3.3.0",
     "material-icons": "^1.13.14",
     "react": "19.1.0",
     "react-native": "0.81.0",
