--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^4.14.1",
     "react-native-svg": "^15.12.1",
     "react-native-svg-transformer": "^1.5.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.16.1",
     "react-redux": "^9.2.0"
