--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-firebase/app": "^23.3.0",
+    "@react-native-firebase/auth": "^23.3.0",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native-vector-icons/fontawesome5": "^12.2.0",
     "@react-native-vector-icons/fontisto": "^12.3.0",
     "@react-native/new-app-screen": "0.81.0",
@@ -24,6 +28,7 @@
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-app-auth": "^8.0.3",
+    "react-native-fbsdk-next": "^13.4.1",
     "react-native-fs": "^2.20.0",
     "react-native-health": "^1.19.0",
     "react-native-image-picker": "^8.2.1",
