--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
     "@shopify/checkout-sheet-kit": "^3.3.0",
+    "apple-signin-auth": "^2.0.0",
+    "google-auth-library": "^10.3.0",
     "material-icons": "^1.13.14",
+    "multipassify": "^1.1.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-app-auth": "^8.0.3",
