--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.4.1",
-
     "@kingstinct/react-native-healthkit": "^10.1.0",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-firebase/app": "^23.3.0",
     "@react-native-firebase/auth": "^23.3.0",
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@shopify/checkout-sheet-kit": "^3.3.0",
     "apple-signin-auth": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "google-auth-library": "^10.3.0",
     "material-icons": "^1.13.14",
     "multipassify": "^1.1.0",
@@ -63,6 +64,7 @@
     "@react-native/eslint-config": "0.81.0",
     "@react-native/metro-config": "0.81.0",
     "@react-native/typescript-config": "0.81.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
