--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,9 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=<alias you chose>
+MYAPP_UPLOAD_STORE_PASSWORD=<keystore password>
+MYAPP_UPLOAD_KEY_PASSWORD=<key password>
+
