--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-nitro-modules": "^0.29.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.14.1",
+    "react-native-share": "^12.2.0",
     "react-native-svg": "^15.12.1",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-toast-message": "^2.3.3",
