--- a/ios/HealthyTiffin/HealthyTiffinRelease.entitlements
+++ b/ios/HealthyTiffin/HealthyTiffinRelease.entitlements
@@ -6,6 +6,8 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.healthkit</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array/>
 </dict>
